# Hello-Cuda

./: .gitmodules  CMakeLists.txt  Makefile  README.md  flake.nix  shell.nix
include/: hello-world.h  main.h
make/: dotfiles.mk
src/: main.cu
src/hello-world/: helloWorld.cu
